--- a/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
@@ -42,104 +42,9 @@
         <div class="card card-body">
             <div class="py-2" [formGroup]="listForm">
                 <div class="row">
-                    <div class="col-lg-3 col-sm-12">
-                        <mat-form-field
-                            class="mat-form-field-fluid w-full"
-                            appearance="outline"
-                            *ngIf="single_zone"
-                        >
-                            <mat-label class="customMatLabel">Zone</mat-label>
-                            <mat-select
-                                [(ngModel)]="selected_z"
-                                formControlName="ZoneId"
-                                [disabled]="disable_zone"
-                            >
-                                <mat-option [value]="SelectedZones?.ZoneId">
-                                    {{ SelectedZones?.ZoneName }}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                        <mat-form-field
-                            class="mat-form-field-fluid w-full"
-                            appearance="outline"
-                            *ngIf="!single_zone"
-                        >
-                            <mat-label class="customMatLabel">Zone</mat-label>
-                            <mat-select
-                                [(ngModel)]="selected_z"
-                                formControlName="ZoneId"
-                                [disabled]="disable_zone"
-                                (selectionChange)="changeZone($event)"
-                            >
-                                <mat-option
-                                    *ngFor="let zone of SelectedZones"
-                                    [value]="zone?.ZoneId"
-                                    [disabled]="disable_zone"
-                                >
-                                    {{ zone?.ZoneName }}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    </div>
-                    <div class="col-lg-3 col-sm-12">
-                        <mat-form-field
-                            class="mat-form-field-fluid w-full"
-                            appearance="outline"
-                        >
-                            <mat-label class="customMatLabel"
-                                >Branch
-                                <strong class="matMandatory"
-                                    >*</strong
-                                ></mat-label
-                            >
-                            <mat-select
-                                [(ngModel)]="selected_b"
-                                formControlName="BranchCode"
-                                [disabled]="disable_branch"
-                                (selectionChange)="changeBranch($event)"
-                                *ngIf="!single_branch"
-                            >
-                                <mat-option
-                                    *ngFor="let branch of SelectedBranches"
-                                    [value]="branch?.BranchCode"
-                                >
-                                    {{ branch?.Name }}
-                                </mat-option>
-                            </mat-select>
-                            <mat-select
-                                [(ngModel)]="selected_b"
-                                formControlName="BranchCode"
-                                [disabled]="disable_branch"
-                                *ngIf="single_branch"
-                            >
-                                <mat-option
-                                    [value]="SelectedBranches?.BranchCode"
-                                >
-                                    {{ SelectedBranches?.Name }}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    </div>
-                    <div class="col-lg-3 col-sm-12">
-                        <mat-form-field
-                            class="mat-form-field-fluid w-full"
-                            appearance="outline"
-                        >
-                            <mat-label class="customMatLabel">Circle</mat-label>
-
-                            <mat-select
-                                [(ngModel)]="selected_c"
-                                formControlName="CircleId"
-                                [disabled]="disable_circle"
-                            >
-                                <mat-option
-                                    *ngFor="let circle of SelectedCircles"
-                                    [value]="circle?.Id"
-                                >
-                                    {{ circle?.CircleCode }}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
+                    <div class="w-full">
+                        <app-zone-branch-circle [form]="listForm" [should_show_circle]="true"
+                                                    (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                     </div>
                     <div class="col-lg-3 col-sm-12">
                         <mat-form-field
